--- a/documentation/operators/combinelatest.html
+++ b/documentation/operators/combinelatest.html
@@ -165,7 +165,7 @@ Completed</pre></div>
      </ul>
   {% endlang_operator %}
 
-  {% lang_operator RxKotlin %}
+  {% lang_operator RxKotlin combineLatest %}
      <p>
       <span style="color:#ff0000">TBD</span>
      </p>
