--- a/documentation/operators/template.html
+++ b/documentation/operators/template.html
@@ -28,6 +28,13 @@ id: oPERATOR
 <h2>Language-Specific Information:</h2>
 
 <div class="panel-group operators-by-language" id="accordion" role="tablist" aria-multiselectable="true">
+
+  {% lang_operator RxClojure %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxCpp %}
     <p>
      <span style="color:#f00">TBD</span>
