--- a/documentation/operators/all.html
+++ b/documentation/operators/all.html
@@ -151,5 +151,6 @@ Completed</pre></div></figcaption>
      <p>
       <span style="color:#ff0000">TBD</span>
      </p>
+  {% endlang_operator %}
 
 </div>
